# dinner_check

./: .clangd  .gdb_history  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.sh  main.cc  main.h  py.cc  setup.py  test.py
.cmake/api/v1/reply/: cache-v2-5fe1ec9256c22dc5cb88.json  cmakeFiles-v1-e28f21966dbc77dc569c.json  codemodel-v2-c1db0d56540eff0fb6bb.json  directory-_deps.googletest-build-RelWithDebInfo-f8368d6ca1423f24ea57.json  directory-_deps.googletest-build.googlemock-RelWithDebInfo-6344abad1eef553f6a1d.json  directory-_deps.googletest-build.googletest-RelWithDebInfo-485b3fd51a120e8e3000.json  index-2023-05-02T08-00-25-0911.json  target-gmock-RelWithDebInfo-0d5256591f8eecb2a8b7.json  target-gmock_main-RelWithDebInfo-872eaffa717d57308ba2.json  (+4 more)
app/: CMakeLists.txt  Makefile  app.py  cmake_install.cmake  main.cc  start.sh  stop.sh
app/templates/: index.html  t_choose.html  t_choose_1.html  t_choose_2.html  t_choose_3.html  t_choose_7.html  t_choose_7_1.html
app_qr/: app_qr.py  copy.sh  restart.sh  start.sh  stop.sh
app_qr/templates/: index.html
app_test/: app_test.py  package-lock.json  start.sh  stop.sh
app_test/templates/: _index.html  index.html  t_choose_3_1.html  t_choose_4.html  t_choose_5.html  t_choose_6.html  t_choose_6_1.html
dinner_check_cpp_library/: install.sh  main.cc  main.h
dinner_check_cpp_library/data/: 20230615_student_dinner_data.json
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
